syntax = "proto3";
package test;

option java_multiple_files = true;
option java_package = "com.ling5821.aiproto.proto";
option java_outer_classname = "PersonProto";
message Person {
  int32 id = 1;
  string name = 2;
  uint32 age = 3;
  string email = 5;
  string address = 6;
}